--- a/rust/Cargo.toml
+++ b/rust/Cargo.toml
@@ -15,6 +15,7 @@ clap = "*"
 error-chain = "0.11"
 uuid = "0.5"
 log = "*"
+data-encoding = "2.1"
 
 # API server
 chrono = { version = "0.4", features = ["serde"] }
