--- a/rust/fatcat-api/api.yaml
+++ b/rust/fatcat-api/api.yaml
@@ -21,20 +21,20 @@ x-entity-props: &ENTITYPROPS
     enum: ["wip", "active", "redirect", "deleted"]
   ident:
     type: string
-    #format: uuid
-    example: "00000000-0000-0000-adce-000000000001"
+    #format: custom
+    example: "q3nouwy3nnbsvo3h5klxsx4a7y"
   revision:
-    type: integer
-    example: 42
-    format: int64
-  redirect:
     type: string
     #format: uuid
-    example: "00000000-0000-0000-adce-000000000002"
+    example: "86daea5b-1b6b-432a-bb67-ea97795f80fe"
+  redirect:
+    type: string
+    #format: custom
+    example: "q3nouwy3nnbsvo3h5klxsx4a7y"
   editgroup_id:
-    type: integer
-    example: 16
-    format: int64
+    type: string
+    #format: custom
+    example: "q3nouwy3nnbsvo3h5klxsx4a7y"
   extra:
     type: object
     additionalProperties: {}
@@ -135,10 +135,10 @@ definitions:
         type: string
       work_id:
         type: string
-        example: "00000000-0000-0000-adce-000000000001"
+        example: "q3nouwy3nnbsvo3h5klxsx4a7y"
       container_id:
         type: string
-        example: "00000000-0000-0000-adce-000000000001"
+        example: "q3nouwy3nnbsvo3h5klxsx4a7y"
       release_type:
         type: string
         example: "book"
@@ -207,19 +207,18 @@ definitions:
           format: int64
       ident:
           type: string
-          example: "00000000-0000-0000-adce-000000000001"
+          example: "q3nouwy3nnbsvo3h5klxsx4a7y"
       revision:
-          type: integer
-          example: 42
-          format: int64
+          type: string
+          #format: uuid
+          example: "86daea5b-1b6b-432a-bb67-ea97795f80fe"
       redirect_ident:
           type: string
-          example: "00000000-0000-0000-adce-000000000002"
-          #format: uuid
+          example: "q3nouwy3nnbsvo3h5klxsx4a7y"
+          #format: ident
       editgroup_id:
-          type: integer
-          example: 16
-          format: int64
+          type: string
+          example: "q3nouwy3nnbsvo3h5klxsx4a7y"
       extra:
           type: object
           additionalProperties: {}
@@ -228,6 +227,9 @@ definitions:
     required:
       - username
     properties:
+      id:
+        type: string
+        example: "q3nouwy3nnbsvo3h5klxsx4a7y"
       username:
         type: string
         example: "zerocool93"
@@ -237,11 +239,13 @@ definitions:
       - editor_id
     properties:
       id:
-        type: integer
-        format: int64
+        type: string
+        #format: custom
+        example: "q3nouwy3nnbsvo3h5klxsx4a7y"
       editor_id:
-        type: integer
-        format: int64
+        type: string
+        #format: custon
+        example: "q3nouwy3nnbsvo3h5klxsx4a7y"
       description:
         type: string
       extra:
@@ -281,8 +285,8 @@ definitions:
         type: integer
         format: int64
       editgroup_id:
-        type: integer
-        format: int64
+        type: string
+        example: "q3nouwy3nnbsvo3h5klxsx4a7y"
       timestamp:
         type: string
         format: date-time
@@ -296,7 +300,7 @@ definitions:
         format: int64
       target_release_id:
         type: string
-        #format: uuid
+        #format: ident
       raw:
         type: string
       key:
@@ -319,7 +323,7 @@ definitions:
         format: int64
       creator_id:
         type: string
-        #format: uuid
+        #format: ident
       raw:
         type: string
       role:
@@ -795,9 +799,9 @@ paths:
             items:
               $ref: "#/definitions/release_entity"
         <<: *ENTITYRESPONSES
-  /editor/{username}:
+  /editor/{id}:
     parameters:
-      - name: username
+      - name: id
         in: path
         type: string
         required: true
@@ -816,9 +820,9 @@ paths:
           description: Generic Error
           schema:
             $ref: "#/definitions/error_response"
-  /editor/{username}/changelog:
+  /editor/{id}/changelog:
     parameters:
-      - name: username
+      - name: id
         in: path
         type: string
         required: true
@@ -865,8 +869,8 @@ paths:
     parameters:
       - name: id
         in: path
-        type: integer
-        format: int64
+        type: string
+        #format: custom 
         required: true
     get:
       operationId: "get_editgroup"
@@ -891,8 +895,8 @@ paths:
     parameters:
       - name: id
         in: path
-        type: integer
-        format: int64
+        type: string
+        #format: custom
         required: true
     post:
       operationId: "accept_editgroup"
