--- a/rust/Cargo.toml
+++ b/rust/Cargo.toml
@@ -16,6 +16,8 @@ error-chain = "0.12"
 uuid = "0.5"
 log = "*"
 data-encoding = "2.1"
+regex = "1"
+lazy_static = "1.0"
 
 # API server
 chrono = { version = "0.4", features = ["serde"] }
