contribs: raw -> raw_name

--- a/rust/fatcat-api/api.yaml
+++ b/rust/fatcat-api/api.yaml
@@ -365,7 +365,7 @@ definitions:
       creator_id:
         type: string
         #format: ident
-      raw:
+      raw_name:
         type: string
       extra:
         type: object
