--- a/rust/Cargo.toml
+++ b/rust/Cargo.toml
@@ -18,6 +18,7 @@ log = "*"
 data-encoding = "2.1"
 regex = "1"
 lazy_static = "1.0"
+sha1 = { version = "0.6", features = ["std"] }
 
 # API server
 chrono = { version = "0.4", features = ["serde"] }
