trivial implementation of core_id field on releases

--- a/rust/fatcat-api/api.yaml
+++ b/rust/fatcat-api/api.yaml
@@ -193,6 +193,9 @@ definitions:
       isbn13:
         type: string
         #format: custom
+      core_id:
+        type: string
+        #format: custom
       pmid:
         type: string
       pmcid:
