--- a/rust/fatcat-api/api.yaml
+++ b/rust/fatcat-api/api.yaml
@@ -57,6 +57,10 @@ x-entity-props: &ENTITYPROPS
   extra:
     type: object
     additionalProperties: {}
+# TODO:
+#  edit_extra:
+#    type: object
+#    additionalProperties: {}
 
 definitions:
   error_response:
@@ -438,6 +442,11 @@ paths:
     post:
       operationId: "create_container_batch"
       parameters:
+        - name: autoaccept
+          in: query
+          type: boolean
+          required: false
+          description: "If true, and editor is authorized, batch is accepted all at once"
         - name: entity_list
           in: body
           required: true
@@ -526,6 +535,11 @@ paths:
     post:
       operationId: "create_creator_batch"
       parameters:
+        - name: autoaccept
+          in: query
+          type: boolean
+          required: false
+          description: "If true, and editor is authorized, batch is accepted all at once"
         - name: entity_list
           in: body
           required: true
@@ -630,6 +644,11 @@ paths:
     post:
       operationId: "create_file_batch"
       parameters:
+        - name: autoaccept
+          in: query
+          type: boolean
+          required: false
+          description: "If true, and editor is authorized, batch is accepted all at once"
         - name: entity_list
           in: body
           required: true
@@ -718,6 +737,11 @@ paths:
     post:
       operationId: "create_release_batch"
       parameters:
+        - name: autoaccept
+          in: query
+          type: boolean
+          required: false
+          description: "If true, and editor is authorized, batch is accepted all at once"
         - name: entity_list
           in: body
           required: true
@@ -822,6 +846,11 @@ paths:
     post:
       operationId: "create_work_batch"
       parameters:
+        - name: autoaccept
+          in: query
+          type: boolean
+          required: false
+          description: "If true, and editor is authorized, batch is accepted all at once"
         - name: entity_list
           in: body
           required: true
