add bad request response type for eg accept

--- a/rust/fatcat-api/api.yaml
+++ b/rust/fatcat-api/api.yaml
@@ -1001,6 +1001,10 @@ paths:
           description: Unmergable
           schema:
             $ref: "#/definitions/error_response"
+        400:
+          description: Bad Request
+          schema:
+            $ref: "#/definitions/error_response"
         404:
           description: Not Found
           schema:
