refactor fatcat-api => fatcat-api-spec

--- a/rust/Cargo.toml
+++ b/rust/Cargo.toml
@@ -2,12 +2,14 @@
 name = "fatcat"
 version = "0.1.0"
 authors = ["Bryan Newbold <bnewbold@archive.org>"]
+description = "A scalable, versioned, API-oriented catalog of bibliographic entities and file metadata"
+license = "AGPL 3.0"
 
 [workspace]
-members = ["fatcat-api"]
+members = ["fatcat-api-spec"]
 
 [dependencies]
-fatcat-api = {version = "*", path = "fatcat-api"}
+fatcat-api-spec = {version = "*", path = "fatcat-api-spec"}
 diesel = { version = "1.3", features = ["postgres", "uuid", "serde_json", "chrono", "r2d2"] }
 diesel_migrations = "1.3"
 dotenv = "0.9.0"
