--- a/rust/Cargo.toml
+++ b/rust/Cargo.toml
@@ -35,6 +35,9 @@ slog-term = "*"
 slog-async = "*"
 serde_json = "1.0"
 
+# Command-line tools
+crossbeam-channel = "0.2"
+
 # Unused (hyper 0.11 and https)
 #hyper-openssl = {version = "0.2", optional = true}
 #hyper-tls = {version = "0.1.2", optional = true}
