--- a/rust/Cargo.toml
+++ b/rust/Cargo.toml
@@ -13,7 +13,7 @@ fatcat-api-spec = {version = "*", path = "fatcat-api-spec"}
 diesel = { version = "1.3", features = ["postgres", "uuid", "serde_json", "chrono", "r2d2"] }
 diesel_migrations = "1.3"
 dotenv = "0.9.0"
-clap = "*"
+clap = "2"
 error-chain = "0.12"
 uuid = "0.5"
 log = "*"
@@ -37,6 +37,7 @@ serde_json = "1.0"
 
 # Command-line tools
 crossbeam-channel = "0.2"
+num_cpus = "1"
 
 # Unused (hyper 0.11 and https)
 #hyper-openssl = {version = "0.2", optional = true}
