--- a/rust/Cargo.toml
+++ b/rust/Cargo.toml
@@ -38,6 +38,7 @@ serde_json = "1.0"
 # Command-line tools
 crossbeam-channel = "0.2"
 num_cpus = "1"
+env_logger = "*"
 
 # Unused (hyper 0.11 and https)
 #hyper-openssl = {version = "0.2", optional = true}
