--- a/.travis.yml
+++ b/.travis.yml
@@ -1,49 +1,50 @@
-sudo: false
+sudo: required
 language: rust
-# necessary for `travis-cargo coveralls --no-sudo`
+
+# Cache cargo symbols for faster build
+cache: cargo
+
+# Dependencies of kcov, used by coverage
 addons:
   apt:
     packages:
       - libcurl4-openssl-dev
       - libelf-dev
       - libdw-dev
-      - binutils-dev # optional: only required for the --verify flag of coveralls
+      - binutils-dev
+      - cmake # also required for cargo-update
+    sources:
+      - kalakris-cmake
 
 # run builds for all the trains (and more)
 rust:
-  - nightly
-  - beta
+  #- nightly
+  #- beta
   # check it compiles on the latest stable compiler
   - stable
   # and the first stable one (this should be bumped as the minimum
   # Rust version required changes)
-  - 1.0.0
+  #- 1.0.0
 
-# load travis-cargo
 before_script:
-  - |
-      pip install 'travis-cargo<0.2' --user &&
-      export PATH=$HOME/.local/bin:$PATH
+  - cd rust
+  - export PATH=$HOME/.cargo/bin:$PATH
+  - cargo install cargo-update || echo "cargo-update already installed"
+  - cargo install cargo-travis || echo "cargo-travis already installed"
+  - cargo install-update -a # update outdated cached binaries
 
 # the main build
+# cargo bench &&
 script:
   - |
-      travis-cargo build &&
-      travis-cargo test &&
-      travis-cargo bench &&
-      travis-cargo --only stable doc
-after_success:
-  # upload the documentation from the build with stable (automatically only actually
-  # runs on the master branch, not individual PRs)
-  - travis-cargo --only stable doc-upload
-  # measure code coverage and upload to coveralls.io (the verify
-  # argument mitigates kcov crashes due to malformed debuginfo, at the
-  # cost of some speed <https://github.com/huonw/travis-cargo/issues/12>)
-  - travis-cargo coveralls --no-sudo --verify
+      cd rust &&
+      cargo build &&
+      cargo test &&
+      cargo doc
 
-env:
-  global:
-    # override the default `--features unstable` used for the nightly branch (optional)
-    - TRAVIS_CARGO_NIGHTLY_FEATURE=nightly
-    # encrypted github token for doc upload (see `GH_TOKEN` link above)
-    - secure: "..."
+after_success:
+  - cd rust
+# upload documentation to github.io (gh-pages branch)
+  - cargo doc-upload
+# measure code coverage and upload to coveralls.io
+  - cargo coveralls
