--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -14,7 +14,7 @@ unified_test:
   before_script:
     - cargo install diesel_cli --version 1.3.1
     - apt update -qy
-    - apt install -y python3-dev python3-pip python3-wheel libsnappy-dev
+    - apt install -y python3-dev python3-pip python3-wheel libsnappy-dev libsodium-dev
     - pip3 install pipenv
     - pipenv --version
   script:
