--- a/rust/fatcat-api-spec/api.yaml
+++ b/rust/fatcat-api-spec/api.yaml
@@ -5,8 +5,7 @@ info:
   description: A scalable, versioned, API-oriented catalog of bibliographic entities
     and file metadata
   version: 0.1.0
-# Actually HTTPS in QA and production
-schemes: [http]
+schemes: [https]
 basePath: /v0
 #host: api.fatcat.wiki
 consumes:
@@ -14,19 +13,19 @@ consumes:
 produces:
   - application/json
 
-tags:
- - name: containers
-   descriptions: "Container entities: such as journals, conferences, book series"
- - name: creators
-   descriptions: "Creator entities: such as authors"
- - name: files
-   descriptions: "File entities"
- - name: releases
-   descriptions: "Release entities: individual articles, pre-prints, books"
- - name: works
-   descriptions: "Work entities: grouping releases which are variants of the same work"
- - name: edit-lifecycle
-   descriptions: "Endpoints relating to global edit submission and history"
+tags: # TAGLINE
+ - name: containers # TAGLINE
+   descriptions: "Container entities: such as journals, conferences, book series" # TAGLINE
+ - name: creators # TAGLINE
+   descriptions: "Creator entities: such as authors" # TAGLINE
+ - name: files # TAGLINE
+   descriptions: "File entities" # TAGLINE
+ - name: releases # TAGLINE
+   descriptions: "Release entities: individual articles, pre-prints, books" # TAGLINE
+ - name: works # TAGLINE
+   descriptions: "Work entities: grouping releases which are variants of the same work" # TAGLINE
+ - name: edit-lifecycle # TAGLINE
+   descriptions: "Endpoints relating to global edit submission and history" # TAGLINE
 
 # don't want these to be rust types (at least for now)
 x-fatcat-ident: &FATCATIDENT
@@ -438,8 +437,8 @@ paths:
   /container:
     post:
       operationId: "create_container"
-      tags:
-        - containers
+      tags: # TAGLINE
+        - containers # TAGLINE
       parameters:
         - name: entity
           in: body
@@ -459,8 +458,8 @@ paths:
   /container/batch:
     post:
       operationId: "create_container_batch"
-      tags:
-        - containers
+      tags: # TAGLINE
+        - containers # TAGLINE
       parameters:
         - name: autoaccept
           in: query
@@ -495,14 +494,14 @@ paths:
         required: true
     get:
       operationId: "get_container"
-      tags:
-        - containers
+      tags: # TAGLINE
+        - containers # TAGLINE
       parameters:
         - name: expand
           in: query
           type: string
           required: false
-          description: "List of sub-entities to expand in response. For now, only 'all' accepted."
+          description: "List of sub-entities to expand in response. For containers, none accepted (yet)."
       responses:
         200:
           description: Found Entity
@@ -511,8 +510,8 @@ paths:
         <<: *ENTITYRESPONSES
     put:
       operationId: "update_container"
-      tags:
-        - containers
+      tags: # TAGLINE
+        - containers # TAGLINE
       parameters:
         - name: entity
           in: body
@@ -531,8 +530,8 @@ paths:
         <<: *ENTITYRESPONSES
     delete:
       operationId: "delete_container"
-      tags:
-        - containers
+      tags: # TAGLINE
+        - containers # TAGLINE
       parameters:
         - name: editgroup
           in: query
@@ -556,8 +555,8 @@ paths:
         format: int64
         required: false
     get:
-      tags:
-        - containers
+      tags: # TAGLINE
+        - containers # TAGLINE
       operationId: "get_container_history"
       responses:
         200:
@@ -570,8 +569,8 @@ paths:
   /container/lookup:
     get:
       operationId: "lookup_container"
-      tags:
-        - containers
+      tags: # TAGLINE
+        - containers # TAGLINE
       parameters:
         - name: issnl
           in: query
@@ -586,8 +585,8 @@ paths:
   /creator:
     post:
       operationId: "create_creator"
-      tags:
-        - creators
+      tags: # TAGLINE
+        - creators # TAGLINE
       parameters:
         - name: entity
           in: body
@@ -607,8 +606,8 @@ paths:
   /creator/batch:
     post:
       operationId: "create_creator_batch"
-      tags:
-        - creators
+      tags: # TAGLINE
+        - creators # TAGLINE
       parameters:
         - name: autoaccept
           in: query
@@ -643,14 +642,14 @@ paths:
         required: true
     get:
       operationId: "get_creator"
-      tags:
-        - creators
+      tags: # TAGLINE
+        - creators # TAGLINE
       parameters:
         - name: expand
           in: query
           type: string
           required: false
-          description: "List of sub-entities to expand in response. For now, only 'all' accepted."
+          description: "List of sub-entities to expand in response. For creators, none accepted (yet)."
       responses:
         200:
           description: Found Entity
@@ -659,8 +658,8 @@ paths:
         <<: *ENTITYRESPONSES
     put:
       operationId: "update_creator"
-      tags:
-        - creators
+      tags: # TAGLINE
+        - creators # TAGLINE
       parameters:
         - name: entity
           in: body
@@ -679,8 +678,8 @@ paths:
         <<: *ENTITYRESPONSES
     delete:
       operationId: "delete_creator"
-      tags:
-        - creators
+      tags: # TAGLINE
+        - creators # TAGLINE
       parameters:
         - name: editgroup
           in: query
@@ -705,8 +704,8 @@ paths:
         required: false
     get:
       operationId: "get_creator_history"
-      tags:
-        - creators
+      tags: # TAGLINE
+        - creators # TAGLINE
       responses:
         200:
           description: Found Entity History
@@ -723,8 +722,8 @@ paths:
         required: true
     get:
       operationId: "get_creator_releases"
-      tags:
-        - creators
+      tags: # TAGLINE
+        - creators # TAGLINE
       responses:
         200:
           description: Found
@@ -736,8 +735,8 @@ paths:
   /creator/lookup:
     get:
       operationId: "lookup_creator"
-      tags:
-        - creators
+      tags: # TAGLINE
+        - creators # TAGLINE
       parameters:
         - name: orcid
           in: query
@@ -752,8 +751,8 @@ paths:
   /file:
     post:
       operationId: "create_file"
-      tags:
-        - files
+      tags: # TAGLINE
+        - files # TAGLINE
       parameters:
         - name: entity
           in: body
@@ -773,8 +772,8 @@ paths:
   /file/batch:
     post:
       operationId: "create_file_batch"
-      tags:
-        - files
+      tags: # TAGLINE
+        - files # TAGLINE
       parameters:
         - name: autoaccept
           in: query
@@ -809,14 +808,14 @@ paths:
         required: true
     get:
       operationId: "get_file"
-      tags:
-        - files
+      tags: # TAGLINE
+        - files # TAGLINE
       parameters:
         - name: expand
           in: query
           type: string
           required: false
-          description: "List of sub-entities to expand in response. For now, only 'all' accepted."
+          description: "List of sub-entities to expand in response. For files, none accepted (yet)."
       responses:
         200:
           description: Found Entity
@@ -825,8 +824,8 @@ paths:
         <<: *ENTITYRESPONSES
     put:
       operationId: "update_file"
-      tags:
-        - files
+      tags: # TAGLINE
+        - files # TAGLINE
       parameters:
         - name: entity
           in: body
@@ -845,8 +844,8 @@ paths:
         <<: *ENTITYRESPONSES
     delete:
       operationId: "delete_file"
-      tags:
-        - files
+      tags: # TAGLINE
+        - files # TAGLINE
       parameters:
         - name: editgroup
           in: query
@@ -871,8 +870,8 @@ paths:
         required: false
     get:
       operationId: "get_file_history"
-      tags:
-        - files
+      tags: # TAGLINE
+        - files # TAGLINE
       responses:
         200:
           description: Found Entity History
@@ -884,8 +883,8 @@ paths:
   /file/lookup:
     get:
       operationId: "lookup_file"
-      tags:
-        - files
+      tags: # TAGLINE
+        - files # TAGLINE
       parameters:
         - name: sha1
           in: query
@@ -900,8 +899,8 @@ paths:
   /release:
     post:
       operationId: "create_release"
-      tags:
-        - releases
+      tags: # TAGLINE
+        - releases # TAGLINE
       parameters:
         - name: entity
           in: body
@@ -921,8 +920,8 @@ paths:
   /release/batch:
     post:
       operationId: "create_release_batch"
-      tags:
-        - releases
+      tags: # TAGLINE
+        - releases # TAGLINE
       parameters:
         - name: autoaccept
           in: query
@@ -957,14 +956,14 @@ paths:
         required: true
     get:
       operationId: "get_release"
-      tags:
-        - releases
+      tags: # TAGLINE
+        - releases # TAGLINE
       parameters:
         - name: expand
           in: query
           type: string
           required: false
-          description: "List of sub-entities to expand in response. For now, only 'all' accepted."
+          description: "List of sub-entities to expand in response. For releases, 'files' and 'container' are valid."
       responses:
         200:
           description: Found Entity
@@ -973,8 +972,8 @@ paths:
         <<: *ENTITYRESPONSES
     put:
       operationId: "update_release"
-      tags:
-        - releases
+      tags: # TAGLINE
+        - releases # TAGLINE
       parameters:
         - name: entity
           in: body
@@ -993,8 +992,8 @@ paths:
         <<: *ENTITYRESPONSES
     delete:
       operationId: "delete_release"
-      tags:
-        - releases
+      tags: # TAGLINE
+        - releases # TAGLINE
       parameters:
         - name: editgroup
           in: query
@@ -1019,8 +1018,8 @@ paths:
         required: false
     get:
       operationId: "get_release_history"
-      tags:
-        - releases
+      tags: # TAGLINE
+        - releases # TAGLINE
       responses:
         200:
           description: Found Entity History
@@ -1037,8 +1036,8 @@ paths:
         required: true
     get:
       operationId: "get_release_files"
-      tags:
-        - releases
+      tags: # TAGLINE
+        - releases # TAGLINE
       responses:
         200:
           description: Found
@@ -1050,8 +1049,8 @@ paths:
   /release/lookup:
     get:
       operationId: "lookup_release"
-      tags:
-        - releases
+      tags: # TAGLINE
+        - releases # TAGLINE
       parameters:
         - name: doi
           in: query
@@ -1066,8 +1065,8 @@ paths:
   /work:
     post:
       operationId: "create_work"
-      tags:
-        - releases
+      tags: # TAGLINE
+        - releases # TAGLINE
       parameters:
         - name: entity
           in: body
@@ -1087,8 +1086,8 @@ paths:
   /work/batch:
     post:
       operationId: "create_work_batch"
-      tags:
-        - works
+      tags: # TAGLINE
+        - works # TAGLINE
       parameters:
         - name: autoaccept
           in: query
@@ -1123,14 +1122,14 @@ paths:
         required: true
     get:
       operationId: "get_work"
-      tags:
-        - works
+      tags: # TAGLINE
+        - works # TAGLINE
       parameters:
         - name: expand
           in: query
           type: string
           required: false
-          description: "List of sub-entities to expand in response. For now, only 'all' accepted."
+          description: "List of sub-entities to expand in response. For works, none accepted (yet)."
       responses:
         200:
           description: Found Entity
@@ -1139,8 +1138,8 @@ paths:
         <<: *ENTITYRESPONSES
     put:
       operationId: "update_work"
-      tags:
-        - works
+      tags: # TAGLINE
+        - works # TAGLINE
       parameters:
         - name: entity
           in: body
@@ -1159,8 +1158,8 @@ paths:
         <<: *ENTITYRESPONSES
     delete:
       operationId: "delete_work"
-      tags:
-        - works
+      tags: # TAGLINE
+        - works # TAGLINE
       parameters:
         - name: editgroup
           in: query
@@ -1185,8 +1184,8 @@ paths:
         required: false
     get:
       operationId: "get_work_history"
-      tags:
-        - works
+      tags: # TAGLINE
+        - works # TAGLINE
       responses:
         200:
           description: Found Entity History
@@ -1203,8 +1202,8 @@ paths:
         required: true
     get:
       operationId: "get_work_releases"
-      tags:
-        - works
+      tags: # TAGLINE
+        - works # TAGLINE
       responses:
         200:
           description: Found
@@ -1268,8 +1267,8 @@ paths:
   /editgroup:
     post:
       operationId: "create_editgroup"
-      tags:
-        - edit-lifecycle
+      tags: # TAGLINE
+        - edit-lifecycle # TAGLINE
       parameters:
         - name: editgroup
           in: body
@@ -1297,8 +1296,8 @@ paths:
         <<: *FATCATIDENT
     get:
       operationId: "get_editgroup"
-      tags:
-        - edit-lifecycle
+      tags: # TAGLINE
+        - edit-lifecycle # TAGLINE
       responses:
         200:
           description: Found
@@ -1324,8 +1323,8 @@ paths:
         <<: *FATCATIDENT
     post:
       operationId: "accept_editgroup"
-      tags:
-        - edit-lifecycle
+      tags: # TAGLINE
+        - edit-lifecycle # TAGLINE
       responses:
         200:
           description: Merged Successfully
@@ -1356,8 +1355,8 @@ paths:
         required: false
     get:
       operationId: "get_changelog"
-      tags:
-        - edit-lifecycle
+      tags: # TAGLINE
+        - edit-lifecycle # TAGLINE
       responses:
         200:
           description: Success
@@ -1378,8 +1377,8 @@ paths:
         required: true
     get:
       operationId: "get_changelog_entry"
-      tags:
-        - edit-lifecycle
+      tags: # TAGLINE
+        - edit-lifecycle # TAGLINE
       responses:
         200:
           description: Found Changelog Entry
