set default host in swagger spec to api.fatcat.wiki

--- a/rust/fatcat-api-spec/api.yaml
+++ b/rust/fatcat-api-spec/api.yaml
@@ -7,7 +7,7 @@ info:
   version: 0.1.0
 schemes: [https]
 basePath: /v0
-#host: api.fatcat.wiki
+host: api.fatcat.wiki
 consumes:
   - application/json
 produces:
