--- a/python/Pipfile
+++ b/python/Pipfile
@@ -31,6 +31,7 @@ flask-uuid = "*"
 flask-debugtoolbar = "*"
 pykafka = "*"
 python-dateutil = "*"
+sickle = "*"
 
 [requires]
 # Python 3.5 is the bundled (system) version of python for Ubuntu 16.04
